--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <title>Landing Page</title>
         <link rel="stylesheet" href="style.css">
     </head>
+
     <body>
-        <div>
-            <div class="header">
-                <div class="header-container">
-                    <a class="logo-container">Header Logo</a>
+        <header>
+            <div class="nav">
+                <div class="left">
+                    <p id="logo">Header Logo</p>
+                </div>
+                <div class="right">
+                    <ul>
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
+                    </ul>
                 </div>
             </div>
-        </div>
+            
+        </header>
     </body>
+
 </html>
